# aoc2024

./: .gitignore  Cargo.toml  justfile  perf.data  perf.data.old
.d11/src/: lib.rs
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2iv5lh53rbkwswvflg0a8hkngcs7dwgb-source
d1/: Cargo.toml
d1/src/: lib.rs
d10/: Cargo.toml
d10/src/: lib.rs
d11/: Cargo.toml
d11/src/: lib.rs
d12/: Cargo.toml
d12/src/: lib.rs
d13/: Cargo.toml
d13/src/: lib.rs
d14/: Cargo.toml
d14/src/: lib.rs
d15/: Cargo.toml
d15/src/: lib.rs
d16/: Cargo.toml
d16/src/: lib.rs
d17/: Cargo.toml
d17/src/: lib.rs
d18/: Cargo.toml
d18/src/: lib.rs
d19/: Cargo.toml
d19/src/: lib.rs
d2/: Cargo.toml
d2/src/: lib.rs
d20/: Cargo.toml
d20/src/: lib.rs
d21/: Cargo.toml
d21/src/: lib.rs
d22/: Cargo.toml
d22/src/: lib.rs
d23/: Cargo.toml
d23/src/: lib.rs
d24/: Cargo.toml
d24/src/: lib.rs
d24/viz/aoc2024-d24-viz/: bbkORpkh.md  bcc.md  bfb.md  bhwANDfgv.md  bjfORqkq.md  bkq.md  bkqANDjhv.md  bqr.md  bsn.md  bsnXORjgg.md  cdkORfjh.md  chkXORnvq.md  cks.md  cqp.md  cqpANDdqm.md  crb.md  crbXORsnr.md  crj.md  crjORfgc.md  dbc.md  (+335 more)
d25/: Cargo.toml
d25/src/: lib.rs
d3/: Cargo.toml
d3/src/: lib.rs
d4/: Cargo.toml
d4/src/: lib.rs
d5/: Cargo.toml
d5/src/: lib.rs
d6/: Cargo.toml
d6/src/: lib.rs
d7/: Cargo.toml
d7/src/: lib.rs
d8/: Cargo.toml
d8/src/: lib.rs
d9/: Cargo.toml
d9/src/: lib.rs
template/: Cargo.toml
template/src/: lib.rs
(+2 files in other folders)
